删除部分代码

--- a/src/assets/style/theme/theme.scss
+++ b/src/assets/style/theme/theme.scss
@@ -301,7 +301,7 @@
           // [组件]
           // d2-container-full 填充型
           .d2-container-full {
-            border: $theme-container-border-outer;
+            // border: $theme-container-border-outer;
             border-top: none;
             border-bottom: none;
             .d2-container-full__header {
