--- a/src/views/common/index.scss
+++ b/src/views/common/index.scss
@@ -24,3 +24,18 @@
   color: #F25151;
   display: none;
 }
+// .bt_input {
+//   width: 500px;
+//   position: relative;
+//   .del_btn {
+//     position: absolute;
+//     top: 50%;
+//     right: -5%;
+//     transform: translateY(-50%);
+//   }
+// }
+
+.unit_content {
+  padding-top: 20px;
+  padding-right: 24px;
+}
